force-app/main/default/objects/EFT_Settlement_Approval__c/EFT_Settlement_Approval__c.object-meta.xml
<CustomObject>
    <label>EFT Settlement Approval</label>
    <nameField>
        <displayFormat>ESA-{0000000}</displayFormat>
        <label>EFT Settlement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EFT Settlement Approvals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>