force-app/main/default/objects/EFT_Settlement_Approval__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>EFT Settlement Approvals</relationshipLabel>
    <relationshipName>EFT_Settlements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>