force-app/main/default/objects/EFT_Settlement_Approval__c/fields/Account_Country__c.field-meta.xml
<CustomField>
    <fullName>Account_Country__c</fullName>
    <formula>TEXT(Account__r.Country__c)</formula>
    <label>Account Country</label>
    <type>Text</type>
</CustomField>