force-app/main/default/objects/EFT_Settlement_Approval__c/fields/Account_Region__c.field-meta.xml
<CustomField>
    <fullName>Account_Region__c</fullName>
    <formula>TEXT(Account__r.Region__c)</formula>
    <label>Account Region</label>
    <type>Text</type>
</CustomField>