force-app/main/default/objects/EFT_Settlement_Approval__c/fields/Client_data_base_active__c.field-meta.xml
<CustomField>
    <fullName>Client_data_base_active__c</fullName>
    <formula>Account__r.Active__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Client data base active</label>
    <type>Checkbox</type>
</CustomField>