force-app/main/default/objects/EFT_Settlement_Approval__c/fields/Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Completed_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>