force-app/main/default/objects/EFT_Settlement_Approval__c/fields/DD_Status__c.field-meta.xml
<CustomField>
    <fullName>DD_Status__c</fullName>
    <formula>TEXT(Account__r.DD_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>DD Status</label>
    <type>Text</type>
</CustomField>