force-app/main/default/objects/EFT_Settlement_Approval__c/fields/ECN__c.field-meta.xml
<CustomField>
    <fullName>ECN__c</fullName>
    <formula>Account__r.ECN__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ECN</label>
    <type>Text</type>
</CustomField>