force-app/main/default/objects/EFT_Settlement_Approval__c/fields/EFT_Settlement_Approval_Email__c.field-meta.xml
<CustomField>
    <fullName>EFT_Settlement_Approval_Email__c</fullName>
    <defaultValue>IF( RIGHT( $User.Username , LEN($User.Username) - LEN(&quot;@enett.com&quot;) - FIND(&quot;@enett.com.&quot;, $User.Username))= &#39;&#39;,&#39;APACCS@enett.com&#39;,&#39;salesforceadmin@enett.com&#39;)</defaultValue>
    <label>EFT Settlement Approval Email</label>
    <type>Email</type>
</CustomField>