force-app/main/default/objects/EFT_Settlement_Approval__c/listViews/All_EFT_Settlement_Approvals.listView-meta.xml
<ListView>
    <fullName>All_EFT_Settlement_Approvals</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ECN__c</columns>
    <columns>DD_Status__c</columns>
    <columns>Trading_As__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All EFT Settlement Approvals</label>
</ListView>