force-app/main/default/objects/EFT_Settlement_Approval__c/listViews/My_EFT_Awaiting_Settlement.listView-meta.xml
<ListView>
    <fullName>My_EFT_Awaiting_Settlement</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>ECN__c</columns>
    <columns>DD_Status__c</columns>
    <columns>Trading_As__c</columns>
    <columns>Status__c</columns>
    <columns>Start_Date__c</columns>
    <columns>Completed_Date__c</columns>
    <columns>Owner_Name__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Awaiting EFT Settlement</value>
    </filters>
    <label>My EFT Awaiting Settlement</label>
</ListView>